UtahLiveDataTest/src/objects/CloseoutInventory__c.object
<CustomObject>
    <description>[Business] Object to Store the Close out Request Details</description>
    <fields>
        <fullName>Closeout__c</fullName>
        <label>Closeout</label>
        <referenceTo>Closeout__c</referenceTo>
        <relationshipLabel>Closeout Inventory</relationshipLabel>
        <relationshipName>Closeout_Inventory</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>DueDate__c</fullName>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EffectiveDate__c</fullName>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>InitialQuantity__c</fullName>
        <label>Initial Quantity</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>InternalUniqueID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Uniquely identifies each record for data migration purpose only. It is auto populated by trigger in before insert context.</description>
        <externalId>true</externalId>
        <label>Internal Unique ID</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ResidualQuantity__c</fullName>
        <label>Residual Quantity</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Created</fullName>
                </value>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Unused/Residual</fullName>
                </value>
                <value>
                    <fullName>Old</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <defaultValue>&quot;&quot;</defaultValue>
        <label>Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TotalResidualPrice__c</fullName>
        <formula>ResidualQuantity__c * UnitPrice__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Residual Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>UnitPrice__c</fullName>
        <label>Unit Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Closeout Inventory</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CI-{0000}</displayFormat>
        <label>Closeout Inventory Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Closeout Inventory</pluralLabel>
    <recordTypes>
        <fullName>Grantee</fullName>
        <active>true</active>
        <label>Grantee</label>
    </recordTypes>
    <recordTypes>
        <fullName>Grantor</fullName>
        <active>true</active>
        <label>Grantor</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>DueDateValidation</fullName>
        <active>true</active>
        <errorConditionFormula>DueDate__c &lt; TODAY()</errorConditionFormula>
        <errorMessage>Due Date cannot be a past Date</errorMessage>
    </validationRules>
</CustomObject>